<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright 2017-2019, Schlumberger

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>search-core</artifactId>
    <description>Core project for the Search service</description>
    <packaging>jar</packaging>

    <parent>
        <groupId>org.opengroup.osdu</groupId>
        <artifactId>os-search</artifactId>
        <version>0.28.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <properties>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.war.plugin>2.6</maven.war.plugin>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <project.main.basedir>${project.basedir}</project.main.basedir>
        <nimbus-jose-jwt.version>9.1.2</nimbus-jose-jwt.version>
        <elasticsearch.version>7.8.1</elasticsearch.version>
        <jts-io-common.version>1.15.0</jts-io-common.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <exclusions>
                    <exclusion>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-starter-tomcat</artifactId>
                    </exclusion>
                </exclusions>
                <version>2.7.17</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

      <dependencies>
          <dependency>
              <groupId>org.opengroup.osdu</groupId>
              <artifactId>os-core-common-spring6</artifactId>
              <version>${osdu.oscorecommon.version}</version>
          </dependency>
          <dependency>
              <groupId>org.locationtech.jts.io</groupId>
              <artifactId>jts-io-common</artifactId>
              <version>${jts-io-common.version}</version>
          </dependency>
          <dependency>
              <groupId>jakarta.json</groupId>
              <artifactId>jakarta.json-api</artifactId>
          </dependency>
          <dependency>
              <groupId>jakarta.ws.rs</groupId>
              <artifactId>jakarta.ws.rs-api</artifactId>
              <version>4.0.0</version>
          </dependency>
          <dependency>
              <groupId>org.glassfish.jersey.core</groupId>
              <artifactId>jersey-client</artifactId>
          </dependency>
          <dependency>
              <groupId>io.swagger</groupId>
              <artifactId>swagger-jaxrs</artifactId>
              <exclusions>
                  <exclusion>
                      <groupId>jakarta.ws.rs</groupId>
                      <artifactId>jsr311-api</artifactId>
                  </exclusion>
                  <exclusion>
                      <groupId>com.fasterxml.jackson.core</groupId>
                      <artifactId>jackson-databind</artifactId>
                  </exclusion>
              </exclusions>
          </dependency>

          <!--explicitly load latest compatible version with security fix in it-->
          <dependency>
              <groupId>com.nimbusds</groupId>
              <artifactId>nimbus-jose-jwt</artifactId>
              <version>${nimbus-jose-jwt.version}</version>
          </dependency>
          <dependency>
              <groupId>com.fasterxml.jackson.core</groupId>
              <artifactId>jackson-core</artifactId>
              <version>${jackson.version}</version>
          </dependency>
          <dependency>
              <groupId>com.fasterxml.jackson.core</groupId>
              <artifactId>jackson-databind</artifactId>
              <version>${jackson-databind.version}</version>
          </dependency>
          <dependency>
              <groupId>com.fasterxml.jackson.core</groupId>
              <artifactId>jackson-annotations</artifactId>
              <version>${jackson.version}</version>
          </dependency>
          <dependency>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-starter-security</artifactId>
          </dependency>
          <dependency>
              <groupId>org.springframework.security</groupId>
              <artifactId>spring-security-web</artifactId>
              <version>${spring-security.version}</version>
          </dependency>
          <dependency>
              <groupId>org.springframework</groupId>
              <artifactId>spring-webmvc</artifactId>
          </dependency>
          <dependency>
              <groupId>org.jboss.resteasy</groupId>
              <artifactId>resteasy-jackson2-provider</artifactId>
          </dependency>
          <dependency>
              <groupId>org.jboss.resteasy</groupId>
              <artifactId>resteasy-jaxrs</artifactId>
              <exclusions>
                  <exclusion>
                      <groupId>jakarta.validation</groupId>
                      <artifactId>validation-api</artifactId>
                  </exclusion>
              </exclusions>
          </dependency>
          <dependency>
              <groupId>jakarta.validation</groupId>
              <artifactId>jakarta.validation-api</artifactId>
              <version>3.1.0</version>
          </dependency>
          <dependency>
              <groupId>com.google.guava</groupId>
              <artifactId>guava</artifactId>
          </dependency>

          <!--Required for Geo shape queries-->
          <dependency>
              <groupId>org.locationtech.spatial4j</groupId>
              <artifactId>spatial4j</artifactId>
          </dependency>
          <dependency>
              <groupId>com.vividsolutions</groupId>
              <artifactId>jts</artifactId>
              <exclusions>
                  <exclusion>
                      <groupId>xerces</groupId>
                      <artifactId>xercesImpl</artifactId>
                  </exclusion>
              </exclusions>
          </dependency>

          <dependency>
              <groupId>com.auth0</groupId>
              <artifactId>java-jwt</artifactId>
          </dependency>

          <!--  Gson: Java to Json conversion -->
          <dependency>
              <groupId>com.google.code.gson</groupId>
              <artifactId>gson</artifactId>
          </dependency>
          <dependency>
              <groupId>com.fasterxml.jackson.jaxrs</groupId>
              <artifactId>jackson-jaxrs-json-provider</artifactId>
          </dependency>
          <dependency>
              <groupId>org.apache.commons</groupId>
              <artifactId>commons-lang3</artifactId>
          </dependency>
          <!--<dependency>
              <groupId>commons-beanutils</groupId>
              <artifactId>commons-beanutils</artifactId>
          </dependency>-->

          <dependency>
              <groupId>joda-time</groupId>
              <artifactId>joda-time</artifactId>
          </dependency>
          <!--Elasticsearch-->
          <dependency>
              <groupId>org.elasticsearch</groupId>
              <artifactId>elasticsearch</artifactId>
              <version>${elasticsearch.version}</version>
              <exclusions>
                  <exclusion>
                      <groupId>com.fasterxml.jackson.dataformat</groupId>
                      <artifactId>jackson-dataformat-cbor</artifactId>
                  </exclusion>
              </exclusions>
          </dependency>
          <dependency>
              <groupId>org.elasticsearch.client</groupId>
              <artifactId>elasticsearch-rest-client</artifactId>
              <version>${elasticsearch.version}</version>
          </dependency>
          <dependency>
              <groupId>org.elasticsearch.client</groupId>
              <artifactId>elasticsearch-rest-high-level-client</artifactId>
              <version>${elasticsearch.version}</version>
          </dependency>
          <dependency>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-starter-test</artifactId>
              <scope>test</scope>
          </dependency>
          <dependency>
              <groupId>com.github.stefanbirkner</groupId>
              <artifactId>system-rules</artifactId>
              <version>1.19.0</version>
              <scope>test</scope>
          </dependency>
          <dependency>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-starter-actuator</artifactId>
              <version>${spring-boot.version}</version>
          </dependency>
          <dependency>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-starter-jersey</artifactId>
              <version>${spring-boot.version}</version>
          </dependency>
          <dependency>
              <groupId>jakarta.xml.bind</groupId>
              <artifactId>jakarta.xml.bind-api</artifactId>
              <version>4.0.2</version>
          </dependency>
          <dependency>
              <groupId>jakarta.annotation</groupId>
              <artifactId>jakarta.annotation-api</artifactId>
              <version>3.0.0</version>
          </dependency>
          <dependency>
              <groupId>jakarta.inject</groupId>
              <artifactId>jakarta.inject-api</artifactId>
              <version>2.0.1</version>
          </dependency>
      </dependencies>

</project>
